oppo: replace Alert into Toast on invalid user input